Subo proyecto casi finalizado

--- a/entrada-3recetas.html
+++ b/entrada-3recetas.html
@@ -47,43 +47,42 @@
       </div>
     </header>
 
-    <main class="contenedor">
-      <h3 class="centrar-texto">Contacto</h3>
-      
-      <div class="contacto-bg"></div>
+      <main class="contenedor">
+        <h3 class="centrar-texto">3 Deliciosas Recetas de Café</h3>
 
-      <form class="formulario">
-        <div class="campo">
-            <label class="campo__label" for="nombre">Nombre</label>
-            <input
-            class="campo__field" 
-            type="text" 
-            placeholder="Escribe tu nombre" 
-            id="nombre"
-            >
-        </div>
-        <div class="campo">
-            <label class="campo__label" for="email">E-mail</label>
-            <input 
-            class="campo__field" 
-            type="email" 
-            placeholder="Escribe tu nombre" 
-            id="email"
-            >
-        </div>
-        <div class="campo">
-            <label class="campo__label" for="mensaje">Mensaje</label>
-            <textarea class="campo__field" id="mensaje"></textarea>
-        </div>
-        <div class="campo">
-            <input 
-            type="submit" 
-            value="Enviar" 
-            class="boton boton--primario"
-            >
-        </div>
-      </form>
-    </main>
+          <div class="entrada__imagen">
+            <img src="./img/blog2.jpg" alt="Imagen Blog" />
+          </div>
+
+          <div class="entrada__contenido">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+              eius ea voluptatum consequuntur praesentium voluptatibus, illum
+              nihil ipsum vero eligendi in quidem dolores, soluta qui quo
+              architecto aliquam! Repudiandae, eum.
+            </p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad
+              labore sapiente exercitationem id optio. Vel non explicabo
+              consequatur odit distinctio illum quod nulla consequuntur hic.
+              Dolorum excepturi temporibus fuga? Enim. Lorem ipsum dolor sit
+              amet consectetur adipisicing elit. Voluptate omnis ducimus
+              eligendi porro fugit, cum vero ab doloribus eaque sint in magni
+              quos vitae quia facilis dolorem perspiciatis, exercitationem
+              saepe!
+            </p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad
+              labore sapiente exercitationem id optio. Vel non explicabo
+              consequatur odit distinctio illum quod nulla consequuntur hic.
+              Dolorum excepturi temporibus fuga? Enim. Lorem ipsum dolor sit
+              amet consectetur adipisicing elit. Voluptate omnis ducimus
+              eligendi porro fugit, cum vero ab doloribus eaque sint in magni
+              quos vitae quia facilis dolorem perspiciatis, exercitationem
+              saepe!
+            </p>
+          </div>
+      </main>
 
     <footer class="footer">
       <div class="contenedor">
