--- a/index.html
+++ b/index.html
@@ -64,56 +64,95 @@
               nihil ipsum vero eligendi in quidem dolores, soluta qui quo
               architecto aliquam! Repudiandae, eum.
             </p>
-            <a href="entrada.html" class="boton boton--primario">Leer Más</a>
+            <a href="entrada-tipos.html" class="boton boton--primario">Leer Más</a>
           </div>
         </article>
 
         <article class="entrada">
-            <div class="entrada__imagen">
-              <img src="./img/blog2.jpg" alt="Imagen Blog" />
-            </div>
-  
-            <div class="entrada__contenido">
-              <h4 class="no-margin">3 Deliciosas Recetas de Café</h4>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-                eius ea voluptatum consequuntur praesentium voluptatibus, illum
-                nihil ipsum vero eligendi in quidem dolores, soluta qui quo
-                architecto aliquam! Repudiandae, eum.
-              </p>
-              <a href="entrada.html" class="boton boton--primario">Leer Más</a>
-            </div>
-          </article>
+          <div class="entrada__imagen">
+            <img src="./img/blog2.jpg" alt="Imagen Blog" />
+          </div>
 
-          <article class="entrada">
-            <div class="entrada__imagen">
-              <img src="./img/blog3.jpg" alt="Imagen Blog" />
-            </div>
-  
-            <div class="entrada__contenido">
-              <h4 class="no-margin">Beneficios del Café</h4>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-                eius ea voluptatum consequuntur praesentium voluptatibus, illum
-                nihil ipsum vero eligendi in quidem dolores, soluta qui quo
-                architecto aliquam! Repudiandae, eum.
-              </p>
-              <a href="entrada.html" class="boton boton--primario">Leer Más</a>
-            </div>
-          </article>
+          <div class="entrada__contenido">
+            <h4 class="no-margin">3 Deliciosas Recetas de Café</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+              eius ea voluptatum consequuntur praesentium voluptatibus, illum
+              nihil ipsum vero eligendi in quidem dolores, soluta qui quo
+              architecto aliquam! Repudiandae, eum.
+            </p>
+            <a href="entrada-3recetas.html" class="boton boton--primario">Leer Más</a>
+          </div>
+        </article>
 
+        <article class="entrada">
+          <div class="entrada__imagen">
+            <img src="./img/blog3.jpg" alt="Imagen Blog" />
+          </div>
+
+          <div class="entrada__contenido">
+            <h4 class="no-margin">Beneficios del Café</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+              eius ea voluptatum consequuntur praesentium voluptatibus, illum
+              nihil ipsum vero eligendi in quidem dolores, soluta qui quo
+              architecto aliquam! Repudiandae, eum.
+            </p>
+            <a href="entrada-beneficios.html" class="boton boton--primario">Leer Más</a>
+          </div>
+        </article>
       </main>
 
       <aside class="sidebar">
         <h3>Nuestros Cursos y Talleres</h3>
 
-        <ul class="cursos">
-            <li class="widget-curso">
-                <h4 class="no-margin">Tecnicas de Extracción de Café</h4>
-                <p class="widget-curso__label">Precio: <span>Gratis</span></p>
-            </li>
+        <ul class="cursos no-padding">
+          <li class="widget-curso">
+            <h4 class="no-margin">Tecnicas de Extracción de Café</h4>
+            <p class="widget-curso__label">
+              Precio: <span class="widget-curso__info">Gratis</span>
+            </p>
+            <p class="widget-curso__label">
+              Cupo: <span class="widget-curso__info">20</span>
+            </p>
+            <a href="cursos.html" class="boton boton--secundario"
+              >Más Información</a
+            >
+          </li>
+
+          <li class="widget-curso">
+            <h4 class="no-margin">4 Recetas de Café para Principiantes</h4>
+            <p class="widget-curso__label">
+              Precio: <span class="widget-curso__info">Gratis</span>
+            </p>
+            <p class="widget-curso__label">
+              Cupo: <span class="widget-curso__info">20</span>
+            </p>
+            <a href="cursos.html" class="boton boton--secundario"
+              >Más Información</a
+            >
+          </li>
         </ul>
       </aside>
     </div>
+
+    <footer class="footer">
+      <div class="contenedor">
+        <div class="barra">
+          <a class="logo" href="index.html">
+            <h1 class="logo__nombre no-margin centrar-texto">
+              Blog<span class="logo__bold">DeCafé</span>
+            </h1>
+          </a>
+
+          <nav class="navegacion">
+            <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+            <a href="cursos.html" class="navegacion__enlace">Cursos</a>
+            <a href="contacto.html" class="navegacion__enlace">Contacto</a>
+          </nav>
+        </div>
+      </div>
+    </footer>
+    
   </body>
 </html>
