--- a/contacto.html
+++ b/contacto.html
@@ -73,7 +73,7 @@
         </div>
         <div class="campo">
             <label class="campo__label" for="mensaje">Mensaje</label>
-            <textarea class="campo__field" id="mensaje"></textarea>
+            <textarea class="campo__field campo__field--textarea" id="mensaje"></textarea>
         </div>
         <div class="campo">
             <input 
