--- a/contacto.html
+++ b/contacto.html
@@ -67,7 +67,7 @@
             <input 
             class="campo__field" 
             type="email" 
-            placeholder="Escribe tu nombre" 
+            placeholder="Escribe tu mail" 
             id="email"
             >
         </div>
