--- a/index.html
+++ b/index.html
@@ -76,10 +76,7 @@
           <div class="entrada__contenido">
             <h4 class="no-margin">Tipos de Granos de Café</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-              eius ea voluptatum consequuntur praesentium voluptatibus, illum
-              nihil ipsum vero eligendi in quidem dolores, soluta qui quo
-              architecto aliquam! Repudiandae, eum.
+              HOLA BELU MI AMOR TE EXTRAÑO MUCHO
             </p>
             <a href="entrada-tipos.html" class="boton boton--primario">Leer Más</a>
           </div>
