--- a/contacto.html
+++ b/contacto.html
@@ -103,5 +103,6 @@
       </div>
     </footer>
     <script src="./js/modernizer.js"></script>
+    <script src="./js/script-contacto.js"></script>
   </body>
 </html>
